@@ -1,2 +1,51 @@
 # APCS-Java-Project-
 Project 
+# Student Management System - APCS Semester 1 Project
+
+A JavaFX-based Student Management System with GUI, login system, dashboard, CRUD operations, and JSON data persistence.
+
+## Features
+- ✅ User authentication (Login/Logout)
+- ✅ Role-based access (Admin/User)
+- ✅ Dashboard with statistics and charts
+- ✅ Complete CRUD operations for students
+- ✅ JSON data persistence
+- ✅ Input validation and error handling
+- ✅ Search functionality
+- ✅ Professional GUI with JavaFX
+
+## Prerequisites
+- Java JDK 17 or higher
+- JavaFX SDK 17 or higher
+- Gson library (for JSON handling)
+
+## Installation & Setup
+
+### 1. Clone or Download the Project
+```bash
+git clone <https://github.com/MohammadRashid1/APCS-Java-Project-/edit/Data-Files/README.md>
+cd StudentManagementSystem
+
+
+
+REM 1. Navigate to project directory
+cd StudentManagementSystem
+
+REM 2. Compile all Java files
+javac --module-path "C:\path\to\javafx-sdk\lib" ^
+      --add-modules javafx.controls,javafx.fxml ^
+      -cp "lib\*" ^
+      -d out ^
+      src\main\java\com\studentmanagement\**\*.java
+
+REM 3. Create necessary directories
+mkdir data out
+
+REM 4. Copy resource files
+xcopy /E src\main\resources out\
+
+REM 5. Run the application
+java --module-path "C:\path\to\javafx-sdk\lib" ^
+     --add-modules javafx.controls,javafx.fxml ^
+     -cp "out;lib\*" ^
+     com.studentmanagement.Main
